# train-llm-from-scratch

./: .gitignore  README.md  matgpt_model_validation_training_plan.md  notes.md  notes_as_is.md  pyproject.toml  todo.md  train_llm_from_scratch_course_outline_updated.md
configs/: matgpt_mini_8m.yaml  matgpt_tiny_46m.yaml  matgpt_tiny_59m.yaml
course/: glossary.md  outline.md
course/templates/video/: answer-key.md  evidence.md  (+4 more)
docs/: figma_knowledge_system_blueprint.md  llm_training_progress.md
docs/runbooks/: colab-t4-first-run.md
matgpt/: __init__.py  config.py  preflight.py
matgpt/data/: __init__.py  normalize.py  prepare.py  quality.py  shard.py
matgpt/eval/: lm.py  tasks.py
matgpt/model/: __init__.py  generation.py  gpt.py  report.py
matgpt/tokenizer/: io.py  train.py
matgpt/training/: __init__.py  amp.py  artifacts.py  checkpoint.py  dataset.py  metrics.py  optim.py  pretrain.py  run_summary.py  schedule.py  tracking.py
matgpt/utils/: hashing.py  logging.py  seed.py
notebooks/: train_matgpt_t4_base_colab.ipynb
scripts/: benchmark_t4.py  chat.py  evaluate.py  evaluate_tasks.py  model_report.py  preflight_t4.py  prepare_dataset.py  pretrain.py  summarize_run.py  tokenize_and_shard.py  train_tokenizer.py
tests/: test_benchmark.py  test_config.py  test_course_structure.py  test_data.py  test_data_quality.py  test_eval_tasks.py  test_model.py  test_model_report.py  test_notebook_colab.py  test_preflight.py  test_pretrain_smoke.py  test_run_summary.py  test_schedule.py  test_shards.py  test_tokenizer.py  test_tracking.py  test_training_core.py
(+11 files in other folders)
